# email-outreach-tool

./: .gitignore  CLAUDE.md  data.json  email_session.json  main.py  pyproject.toml
db/: DDL.sql  connection.py  queries.py  server.db  service.py  test_insertion.py
src/: CLAUDE.md  __init__.py 16-23-24-794.py  models.py  validation.py
src/TUI/: __init__.py 16-23-24-772.py  commands.py  shell.py
src/TUI/components/: get_stats.py
src/automation/: orchestrator.py  session_state.py
src/automation/agents/: agent_manager.py  email_personalization.py.py  pydantic_models.py  resume_selection.py
src/automation/tools/: email.py
src/automation/workflows/: cold_email.py  draft_email.py
src/prompts/: convert_to_json.md  current_companies.md  find_companies.md  find_emails.md  manual_research.md  progress.md  research_companies.md
src/services/: data_pipeline.py  stats.py
src/tools/: __init__.py
