[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-agent"
version = "0.1.0"
description = "Personalized Cold-Email Internship Automation Tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Preston Rank"}
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
automation-agent = "main:start"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "db*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
